{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 213,
  "lineage": "4e9c32d7-fd81-4e52-30e0-079502a7854a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b6d507d0583dc6a",
            "association_id": "eipassoc-037b749f336344e85",
            "domain": "vpc",
            "id": "eipalloc-01b6d507d0583dc6a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dd7645d4ea77cb1d",
            "private_dns": "ip-172-16-1-116.ec2.internal",
            "private_ip": "172.16.1.116",
            "public_dns": "ec2-184-72-102-145.compute-1.amazonaws.com",
            "public_ip": "184.72.102.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c19f80dba70861db",
            "arn": "arn:aws:ec2:us-east-1:738087856818:instance/i-066ca59e113c1406a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 150,
                "tags": {
                  "Name": "data-volume-1"
                },
                "throughput": 0,
                "volume_id": "vol-0924a79f5c641c711",
                "volume_size": 50,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdc",
                "encrypted": false,
                "iops": 150,
                "tags": {
                  "Name": "data-volume-2"
                },
                "throughput": 0,
                "volume_id": "vol-04ba338d7ff1e2997",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066ca59e113c1406a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0508264ec0cb78fac",
            "private_dns": "ip-172-16-2-157.ec2.internal",
            "private_ip": "172.16.2.157",
            "public_dns": "ec2-3-216-95-240.compute-1.amazonaws.com",
            "public_ip": "3.216.95.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f2fba253da99675",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0355c981fc56221f4",
            "tags": {
              "Environment": "development",
              "Name": "Private_subnet_EC2",
              "Project": "TERRAFORM"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "Private_subnet_EC2",
              "Project": "TERRAFORM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01a09bbb6ea80af79"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_private_sg",
            "aws_subnet.private_subnet1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:738087856818:instance/i-007b310416b3fab20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007b310416b3fab20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7efe585175ab1c6",
            "private_dns": "ip-172-16-1-193.ec2.internal",
            "private_ip": "172.16.1.193",
            "public_dns": "ec2-3-82-110-203.compute-1.amazonaws.com",
            "public_ip": "3.82.110.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad379e24c8cffdcf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040328f2e79df4fb1",
            "tags": {
              "Environment": "development",
              "Name": "Public_subnet_EC2",
              "Project": "TERRAFORM"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "Public_subnet_EC2",
              "Project": "TERRAFORM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0973cc64bf8cfa271"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_public_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:internet-gateway/igw-0225da3fbf183b8bb",
            "id": "igw-0225da3fbf183b8bb",
            "owner_id": "738087856818",
            "tags": {
              "Name": "INTERNET_GATEWAY"
            },
            "tags_all": {
              "Name": "INTERNET_GATEWAY"
            },
            "vpc_id": "vpc-0a34fe40514fd5bef"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b6d507d0583dc6a",
            "connectivity_type": "public",
            "id": "nat-027b40f24ac41d865",
            "network_interface_id": "eni-0dd7645d4ea77cb1d",
            "private_ip": "172.16.1.116",
            "public_ip": "184.72.102.145",
            "subnet_id": "subnet-040328f2e79df4fb1",
            "tags": {
              "Name": "NAT_GATEWAY"
            },
            "tags_all": {
              "Name": "NAT_GATEWAY"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0225da3fbf183b8bb",
            "id": "r-rtb-00c187445f5005c2f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c187445f5005c2f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc",
            "aws_internet_gateway.ig",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_nat_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0de4d116c54b526721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-027b40f24ac41d865",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de4d116c54b52672",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat1",
            "aws_route_table.private1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:route-table/rtb-0de4d116c54b52672",
            "id": "rtb-0de4d116c54b52672",
            "owner_id": "738087856818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-027b40f24ac41d865",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRIVATE_ROUTE_TABLE"
            },
            "tags_all": {
              "Name": "PRIVATE_ROUTE_TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a34fe40514fd5bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:route-table/rtb-00c187445f5005c2f",
            "id": "rtb-00c187445f5005c2f",
            "owner_id": "738087856818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0225da3fbf183b8bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PUBLIC_ROUTE_TABLE"
            },
            "tags_all": {
              "Name": "PUBLIC_ROUTE_TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a34fe40514fd5bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09540e883f147644b",
            "route_table_id": "rtb-0de4d116c54b52672",
            "subnet_id": "subnet-0355c981fc56221f4"
          },
          "dependencies": [
            "aws_route_table.private1",
            "aws_subnet.private_subnet1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a14eed6ea0686da",
            "route_table_id": "rtb-00c187445f5005c2f",
            "subnet_id": "subnet-040328f2e79df4fb1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:security-group/sg-01a09bbb6ea80af79",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a09bbb6ea80af79",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "ec2-sg2",
            "name_prefix": "",
            "owner_id": "738087856818",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a34fe40514fd5bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:security-group/sg-0973cc64bf8cfa271",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0973cc64bf8cfa271",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg1",
            "name_prefix": "",
            "owner_id": "738087856818",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-public-sg"
            },
            "tags_all": {
              "Name": "ec2-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a34fe40514fd5bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:subnet/subnet-0355c981fc56221f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0355c981fc56221f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738087856818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE_SUBNET"
            },
            "tags_all": {
              "Name": "PRIVATE_SUBNET"
            },
            "vpc_id": "vpc-0a34fe40514fd5bef"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:subnet/subnet-040328f2e79df4fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040328f2e79df4fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "738087856818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUBLIC_SUBNET"
            },
            "tags_all": {
              "Name": "PUBLIC_SUBNET"
            },
            "vpc_id": "vpc-0a34fe40514fd5bef"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738087856818:vpc/vpc-0a34fe40514fd5bef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-068b4f853245f3ee6",
            "default_route_table_id": "rtb-09727b2e719b7660b",
            "default_security_group_id": "sg-07db39e6de6a12821",
            "dhcp_options_id": "dopt-08bc84d2478e44420",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a34fe40514fd5bef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09727b2e719b7660b",
            "owner_id": "738087856818",
            "tags": {
              "Name": "terraform-demo-vpc"
            },
            "tags_all": {
              "Name": "terraform-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}